ICU-5849 Replaced Integer.valueOf with new Integer (for older JDKs) and replaced String.class with CharSequence.class
X-SVN-Rev: 22404